// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@ttl expires a record after a specified duration 2`] = `
{
  "additionalImports": [],
  "dependenciesModuleId": "dependencies",
  "models": [
    {
      "consistent": false,
      "fields": [
        {
          "columnName": "_ct",
          "columnNamesForRead": [
            "_ct",
          ],
          "computeFunction": undefined,
          "ean": ":createdAt",
          "eav": "#createdAt",
          "fieldName": "createdAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "ttl",
          "columnNamesForRead": [
            "ttl",
          ],
          "computeFunction": undefined,
          "ean": ":expires",
          "eav": "#expires",
          "fieldName": "expires",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "id",
          "columnNamesForRead": [
            "id",
            "id",
          ],
          "computeFunction": undefined,
          "ean": ":id",
          "eav": "#id",
          "fieldName": "id",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "ID",
        },
        {
          "columnName": "_md",
          "columnNamesForRead": [
            "_md",
          ],
          "computeFunction": undefined,
          "ean": ":updatedAt",
          "eav": "#updatedAt",
          "fieldName": "updatedAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "_v",
          "columnNamesForRead": [
            "_v",
          ],
          "computeFunction": undefined,
          "ean": ":version",
          "eav": "#version",
          "fieldName": "version",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Int",
        },
      ],
      "isLedger": false,
      "isPublic": false,
      "primaryKey": {
        "isComposite": false,
        "isSingleField": true,
        "partitionKeyFields": [
          {
            "columnName": "id",
            "columnNamesForRead": [
              "id",
              "id",
            ],
            "computeFunction": undefined,
            "ean": ":id",
            "eav": "#id",
            "fieldName": "id",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "ID",
          },
        ],
        "partitionKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "table": {
        "enableEncryption": "IsProd",
        "enablePointInTimeRecovery": "IsProd",
        "hasPublicModels": false,
        "hasTtl": true,
        "primaryKey": {
          "isComposite": false,
          "isSingleField": true,
          "partitionKeyFields": [
            {
              "columnName": "id",
              "columnNamesForRead": [
                "id",
                "id",
              ],
              "computeFunction": undefined,
              "ean": ":id",
              "eav": "#id",
              "fieldName": "id",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "ID",
            },
          ],
          "partitionKeyPrefix": undefined,
          "type": "primary",
        },
        "secondaryIndexes": [],
        "tableName": "TableExample",
      },
      "ttlConfig": {
        "argumentAllowed": false,
        "argumentRequired": false,
        "duration": 86400000,
        "fieldName": "expires",
      },
      "typeName": "Example",
    },
  ],
  "tables": [
    {
      "enableEncryption": "IsProd",
      "enablePointInTimeRecovery": "IsProd",
      "hasPublicModels": false,
      "hasTtl": true,
      "primaryKey": {
        "isComposite": false,
        "isSingleField": true,
        "partitionKeyFields": [
          {
            "columnName": "id",
            "columnNamesForRead": [
              "id",
              "id",
            ],
            "computeFunction": undefined,
            "ean": ":id",
            "eav": "#id",
            "fieldName": "id",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "ID",
          },
        ],
        "partitionKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "tableName": "TableExample",
    },
  ],
}
`;

exports[`@ttl marks a fields as the ttl field 2`] = `
{
  "additionalImports": [],
  "dependenciesModuleId": "dependencies",
  "models": [
    {
      "consistent": false,
      "fields": [
        {
          "columnName": "_ct",
          "columnNamesForRead": [
            "_ct",
          ],
          "computeFunction": undefined,
          "ean": ":createdAt",
          "eav": "#createdAt",
          "fieldName": "createdAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "ttl",
          "columnNamesForRead": [
            "ttl",
          ],
          "computeFunction": undefined,
          "ean": ":expires",
          "eav": "#expires",
          "fieldName": "expires",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "id",
          "columnNamesForRead": [
            "id",
            "id",
          ],
          "computeFunction": undefined,
          "ean": ":id",
          "eav": "#id",
          "fieldName": "id",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "ID",
        },
        {
          "columnName": "_md",
          "columnNamesForRead": [
            "_md",
          ],
          "computeFunction": undefined,
          "ean": ":updatedAt",
          "eav": "#updatedAt",
          "fieldName": "updatedAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "_v",
          "columnNamesForRead": [
            "_v",
          ],
          "computeFunction": undefined,
          "ean": ":version",
          "eav": "#version",
          "fieldName": "version",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Int",
        },
      ],
      "isLedger": false,
      "isPublic": false,
      "primaryKey": {
        "isComposite": false,
        "isSingleField": true,
        "partitionKeyFields": [
          {
            "columnName": "id",
            "columnNamesForRead": [
              "id",
              "id",
            ],
            "computeFunction": undefined,
            "ean": ":id",
            "eav": "#id",
            "fieldName": "id",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "ID",
          },
        ],
        "partitionKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "table": {
        "enableEncryption": "IsProd",
        "enablePointInTimeRecovery": "IsProd",
        "hasPublicModels": false,
        "hasTtl": true,
        "primaryKey": {
          "isComposite": false,
          "isSingleField": true,
          "partitionKeyFields": [
            {
              "columnName": "id",
              "columnNamesForRead": [
                "id",
                "id",
              ],
              "computeFunction": undefined,
              "ean": ":id",
              "eav": "#id",
              "fieldName": "id",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "ID",
            },
          ],
          "partitionKeyPrefix": undefined,
          "type": "primary",
        },
        "secondaryIndexes": [],
        "tableName": "TableExample",
      },
      "ttlConfig": {
        "argumentAllowed": true,
        "argumentRequired": true,
        "fieldName": "expires",
      },
      "typeName": "Example",
    },
  ],
  "tables": [
    {
      "enableEncryption": "IsProd",
      "enablePointInTimeRecovery": "IsProd",
      "hasPublicModels": false,
      "hasTtl": true,
      "primaryKey": {
        "isComposite": false,
        "isSingleField": true,
        "partitionKeyFields": [
          {
            "columnName": "id",
            "columnNamesForRead": [
              "id",
              "id",
            ],
            "computeFunction": undefined,
            "ean": ":id",
            "eav": "#id",
            "fieldName": "id",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "ID",
          },
        ],
        "partitionKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "tableName": "TableExample",
    },
  ],
}
`;

exports[`@ttl optionally allows the end-user to specify an alternative expiration 2`] = `
{
  "additionalImports": [],
  "dependenciesModuleId": "dependencies",
  "models": [
    {
      "consistent": false,
      "fields": [
        {
          "columnName": "_ct",
          "columnNamesForRead": [
            "_ct",
          ],
          "computeFunction": undefined,
          "ean": ":createdAt",
          "eav": "#createdAt",
          "fieldName": "createdAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "ttl",
          "columnNamesForRead": [
            "ttl",
          ],
          "computeFunction": undefined,
          "ean": ":expires",
          "eav": "#expires",
          "fieldName": "expires",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "id",
          "columnNamesForRead": [
            "id",
            "id",
          ],
          "computeFunction": undefined,
          "ean": ":id",
          "eav": "#id",
          "fieldName": "id",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "ID",
        },
        {
          "columnName": "_md",
          "columnNamesForRead": [
            "_md",
          ],
          "computeFunction": undefined,
          "ean": ":updatedAt",
          "eav": "#updatedAt",
          "fieldName": "updatedAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "_v",
          "columnNamesForRead": [
            "_v",
          ],
          "computeFunction": undefined,
          "ean": ":version",
          "eav": "#version",
          "fieldName": "version",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Int",
        },
      ],
      "isLedger": false,
      "isPublic": false,
      "primaryKey": {
        "isComposite": false,
        "isSingleField": true,
        "partitionKeyFields": [
          {
            "columnName": "id",
            "columnNamesForRead": [
              "id",
              "id",
            ],
            "computeFunction": undefined,
            "ean": ":id",
            "eav": "#id",
            "fieldName": "id",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "ID",
          },
        ],
        "partitionKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "table": {
        "enableEncryption": "IsProd",
        "enablePointInTimeRecovery": "IsProd",
        "hasPublicModels": false,
        "hasTtl": true,
        "primaryKey": {
          "isComposite": false,
          "isSingleField": true,
          "partitionKeyFields": [
            {
              "columnName": "id",
              "columnNamesForRead": [
                "id",
                "id",
              ],
              "computeFunction": undefined,
              "ean": ":id",
              "eav": "#id",
              "fieldName": "id",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "ID",
            },
          ],
          "partitionKeyPrefix": undefined,
          "type": "primary",
        },
        "secondaryIndexes": [],
        "tableName": "TableExample",
      },
      "ttlConfig": {
        "argumentAllowed": true,
        "argumentRequired": false,
        "duration": 86400000,
        "fieldName": "expires",
      },
      "typeName": "Example",
    },
  ],
  "tables": [
    {
      "enableEncryption": "IsProd",
      "enablePointInTimeRecovery": "IsProd",
      "hasPublicModels": false,
      "hasTtl": true,
      "primaryKey": {
        "isComposite": false,
        "isSingleField": true,
        "partitionKeyFields": [
          {
            "columnName": "id",
            "columnNamesForRead": [
              "id",
              "id",
            ],
            "computeFunction": undefined,
            "ean": ":id",
            "eav": "#id",
            "fieldName": "id",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "ID",
          },
        ],
        "partitionKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "tableName": "TableExample",
    },
  ],
}
`;
